# DataEngineeringP1

./: .dockerignore  .gitignore  .pdm-python  DataEngineeringP1-1.sln  DataEngineeringP1.sln  README.md  docker-compose.yml  pyproject.toml
Data/Raw/Sqlite/: AdventureWorks.ldb  AdventureWorks.sqlite  aenc create table.txt  datawarehouse create table.txt  sdm create table.txt
Frontend/: Dockerfile  package-lock.json  package.json
Frontend/src/: App.css  App.jsx  main.jsx
Frontend/src/CustomDashboard/: CustomDashboard.jsx
Frontend/src/DashboardElements/: Cards.jsx  CustomBarChart.jsx  CustomBarChartInfo.jsx  CustomLineChart.jsx  CustomPieChart.jsx
Frontend/src/PowerBiDashboard/: PowerBiDashboard.jsx
Frontend/src/Selection/: Selection.jsx
WebApi/: Program.cs  WebApi.csproj
WebApi/AppConfigure/: AppConfigure.cs
WebApi/PowerBiConnection/: PowerBI.cs
dashboard/: dashboard Datawarehouse.pbix
src/data_engineering_p1/Jupyter/: DWH.ipynb  DWH_ETL.ipynb  SDM_ETL.ipynb  SDM_ETL_REVAMP.ipynb  setup.ipynb  test.ipynb
