[project]
name = "Data_Engineering_P1"
version = "0.1.0"
description = "Eerste project van DEDS"
authors = [
    {name = "Jarno Vis", email = "84909095+Jarnovis@users.noreply.github.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
