[project]
name = "Data_Engineering_P1"
version = "0.1.0"
description = "Eerste project van DEDS"
authors = [
    {name = "Jarno Vis", email = "84909095+Jarnovis@users.noreply.github.com"},
]
dependencies = ["numpy>=2.0.2", "pandas>=2.2.3", "ipykernel>=6.29.5", "pyodbc>=5.2.0", "sqlalchemy>=2.0.39"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
