[project]
name = "Data_Engineering_P1"
version = "0.1.0"
description = "Eerste project van DEDS"
authors = [
    {name = "Jarno Vis", email = "84909095+Jarnovis@users.noreply.github.com"},
]
dependencies = ["pyodbc>=5.2.0", "ipykernel>=6.29.5", "pandas>=2.2.3", "numpy>=2.0.2", "SciPy>=1.13.1"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
